# ccml

./: .gitignore  .gitmodules  CMakeLists.txt  core
mnist/: MnistExtractor.cpp  MnistExtractor.hpp  main.cpp
src/: Activation.cpp  Activation.hpp  ActivationFunction.hpp  Initialization.cpp  Initialization.hpp  Layer.cpp  Layer.hpp  Loss.cpp  Loss.hpp  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  Node.cpp  Node.hpp  Perceptron.cpp  Perceptron.hpp  Sample.hpp  Serializable.hpp  Transfer.cpp  Transfer.hpp  Types.hpp  Utils.hpp
src/activation/: Heaviside.hpp  Relu.hpp  Sigmoid.hpp
src/layer/: AbstractLayer.hpp  ConvolutionalLayer.hpp  FullyConnectedLayer.cpp  FullyConnectedLayer.hpp  InputLayer.hpp  NeuronLayer.cpp  NeuronLayer.hpp  SoftmaxLayer.cpp  SoftmaxLayer.hpp  TransferLayer.cpp  TransferLayer.hpp  TypedLayer.hpp
src/loss/: AbstractLoss.cpp  AbstractLoss.hpp  CrossEntropy.cpp  CrossEntropy.hpp  CrossEntropySigmoid.cpp  CrossEntropySigmoid.hpp  CrossEntropySoftmax.cpp  CrossEntropySoftmax.hpp  MeanSquaredError.cpp  MeanSquaredError.hpp  Quadratic.cpp  Quadratic.hpp
src/network/: MultiLayerPerceptron.cpp  MultiLayerPerceptron.hpp
src/optimization/: AdaGrad.cpp  AdaGrad.hpp  Adam.cpp  Adam.hpp  Backpropagation.cpp  Backpropagation.hpp  Momentum.cpp  Momentum.hpp  NetworkOptimization.cpp  NetworkOptimization.hpp  NeuronData.hpp  SgdExtension.hpp  StochasticGradientDescent.cpp  StochasticGradientDescent.hpp
src/transfer/: Heaviside.cpp  Heaviside.hpp  Identity.cpp  Identity.hpp  LeakingRelu.cpp  LeakingRelu.hpp  Relu.cpp  (+7 more)
test/: CcmlTest.hpp  InitializationTest.cpp  NeuronTest.cpp  PerceptronTest.cpp  TransferTest.cpp  main.cpp
(+13 files in other folders)
